fix nav bar, landing metamask, investor overflow

--- a/src/app/pages/investors/investors.component.scss
+++ b/src/app/pages/investors/investors.component.scss
@@ -6,3 +6,9 @@
   color: white;
   padding: 30px;
 }
+
+section {
+  height:100vh;
+  width: 100vw;
+  overflow-x: hidden;
+}
